--- a/style/style.css
+++ b/style/style.css
@@ -37,6 +37,7 @@ body {
   background-color: #8ff6ff;
 }
 
+/*------------Content styling------------*/
 /*Landing Page*/
 .fullpage__intro {
   -webkit-box-pack: start;
@@ -101,7 +102,7 @@ body {
 }
 
 .section1 .title-main p {
-  color: #082f33;
+  color: #00394f;
   font-weight: 300;
   font-size: 2.3rem;
   margin-top: 3rem;
@@ -119,7 +120,7 @@ body {
 }
 
 .section1 .title-main a:hover {
-  color: #082f33;
+  color: #00394f;
 }
 
 .section1 .title-main a:hover ion-icon {
@@ -263,11 +264,11 @@ body {
 }
 
 .color1 {
-  color: #d63447;
+  color: #7e3636;
 }
 
 .color2 {
-  color: #b590ca;
+  color: #69375c;
 }
 
 .color3 {
@@ -275,7 +276,7 @@ body {
 }
 
 .color4 {
-  color: #9dc6a7;
+  color: #58816F;
 }
 
 .color5 {
@@ -303,7 +304,7 @@ body {
           flex-direction: column;
   padding: 4rem 2rem;
   margin-top: 5rem;
-  color: #082f33;
+  color: #00394f;
 }
 
 .footer .contact h1 {
@@ -325,26 +326,26 @@ body {
   font-size: 2.5rem;
   margin-bottom: 2rem;
   line-height: 4rem;
-  color: #082f33;
+  color: #00394f;
 }
 
 .footer .contact .info-contact a {
   font-size: 2.5rem;
   margin-bottom: 2rem;
   line-height: 4rem;
-  color: #082f33;
+  color: #00394f;
 }
 
 .footer .copyright {
   margin-top: 10rem;
   padding: 0 2rem;
   font-size: 2rem;
-  color: #8ff6ff;
+  color: #202020;
 }
 
 /*Items Page*/
 .items {
-  background-color: #1a0b00;
+  background-color: #202020;
 }
 
 .fs-v2 {
@@ -390,7 +391,7 @@ body {
 
 .item-info .item-info-desc p {
   font-size: 2.5rem;
-  color: #082f33;
+  color: #00394f;
   margin-bottom: 2rem;
 }
 
@@ -454,24 +455,19 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-top: 1px solid #765f83;
+  border-top: 1px solid #69375c;
 }
 
 .next-item a {
   font-size: 4rem;
-  color: #082f33;
-  height: 20vh;
-  padding: 20% 0;
+  color: #00394f;
+  height: 10vh;
   text-align: center;
   width: 100%;
   background-color: white;
@@ -480,8 +476,40 @@ body {
 }
 
 .next-item a:hover {
-  background-color: #765f83;
+  background-color: #69375c;
   color: white;
+}
+
+#next-orange {
+  border-top: 1px solid #ffac41;
+}
+
+#next-orange a:hover {
+  background-color: #ffac41;
+}
+
+#next-strawberry {
+  border-top: 1px solid #7e3636;
+}
+
+#next-strawberry a:hover {
+  background-color: #7e3636;
+}
+
+#next-lemon {
+  border-top: 1px solid #ffd868;
+}
+
+#next-lemon a:hover {
+  background-color: #ffd868;
+}
+
+#next-cucumber {
+  border-top: 1px solid #58816F;
+}
+
+#next-cucumber a:hover {
+  background-color: #58816F;
 }
 
 @media screen and (min-width: 600px) {
@@ -499,7 +527,7 @@ body {
   }
   .navbar .nav-container li a {
     margin: 0 1rem;
-    color: #082f33;
+    color: #00394f;
     -webkit-transition: all .3s ease-in;
     transition: all .3s ease-in;
   }
@@ -600,7 +628,6 @@ body {
   }
   .next-item a {
     font-size: 3rem;
-    padding: 20% 0;
   }
 }
 
@@ -676,7 +703,7 @@ body {
     font-size: 1rem;
   }
   .section .flavor-section .img img {
-    width: 120%;
+    width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
     position: absolute;
@@ -701,20 +728,20 @@ body {
     font-size: 1.2rem;
   }
   .footer .contact {
-    padding: 2rem 2rem;
-    margin-top: 3rem;
+    padding: 0rem 2rem;
+    margin-top: 2rem;
   }
   .footer .contact h1 {
     font-size: 3rem;
     margin: 3rem 0;
   }
   .footer .contact .info-contact p {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 2rem;
     line-height: 3rem;
   }
   .footer .contact .info-contact a {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 1.5rem;
     line-height: 3rem;
   }
@@ -865,39 +892,54 @@ body {
   .items {
     height: 100vh;
   }
+  .item-info {
+    padding: 0 15rem;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
   .item-info .item-info-desc h2 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   .item-info .item-info-desc p {
-    font-size: 1.9rem;
+    font-size: 1rem;
   }
   .item-info .item-info-desc ul li {
-    font-size: 1.9rem;
+    font-size: 1rem;
   }
   .item-info table {
-    width: 100%;
+    margin-top: 15rem;
+    padding: 0 8rem;
   }
   .item-info table tbody tr th {
-    font-size: 2rem;
+    font-size: 1rem;
   }
   .item-info table tbody tr td {
-    font-size: 2rem;
+    font-size: 1rem;
   }
-  .item-info p {
-    font-size: 1.4rem;
+  .item-info .daily {
+    font-size: .8rem;
+    margin-top: 35rem;
+    width: 39rem;
+    margin-left: -18rem;
+  }
+  .benefits-item {
+    padding: 2rem 6rem 4rem 6rem;
   }
   .benefits-item h2 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   .benefits-item p {
-    font-size: 2rem;
+    font-size: 1.1rem;
   }
   .next-item {
     margin-top: 0rem;
   }
   .next-item a {
     font-size: 3rem;
-    padding: 20% 0;
+    height: 8rem;
+    padding: 2rem;
   }
 }
 
@@ -948,7 +990,7 @@ body {
     margin-top: 1rem;
   }
   .section .flavor-section .img img {
-    width: 70%;
+    width: 65%;
   }
   .section .flavor-section .img .right {
     left: 25%;
@@ -966,7 +1008,7 @@ body {
     font-size: 1rem;
   }
   .footer {
-    padding: 0 12rem;
+    padding: 0 10rem;
   }
   .footer .contact {
     padding: 0rem;
@@ -980,18 +1022,19 @@ body {
     margin: 4rem 0 4rem 18rem;
   }
   .footer .contact .info-contact p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-bottom: 2rem;
     line-height: 2rem;
   }
   .footer .contact .info-contact a {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-bottom: 1.5rem;
     line-height: 2rem;
   }
   .footer .copyright {
     font-size: 1rem;
-    margin-top: 4rem;
+    margin-top: 0rem;
+    margin-bottom: 3rem;
   }
   /*Items Page*/
   .fs-v2 {
@@ -999,31 +1042,6 @@ body {
   }
   .items {
     height: 100vh;
-  }
-  .item-info {
-    padding: 0 15rem;
-  }
-  .item-info .item-info-desc h2 {
-    font-size: 2rem;
-  }
-  .item-info .item-info-desc p {
-    font-size: 1rem;
-  }
-  .item-info .item-info-desc ul li {
-    font-size: 1rem;
-  }
-  .item-info table {
-    margin-top: -4rem;
-    padding: 0 4rem;
-  }
-  .item-info table tbody tr th {
-    font-size: 1rem;
-  }
-  .item-info table tbody tr td {
-    font-size: 1rem;
-  }
-  .item-info p {
-    font-size: .8rem;
   }
   .benefits-item {
     padding: 0 15rem;
@@ -1036,12 +1054,8 @@ body {
     font-size: 1rem;
     margin-bottom: 4rem;
   }
-  .next-item {
-    margin-top: 0rem;
-  }
   .next-item a {
-    font-size: 3rem;
-    padding: 10% 0;
+    font-size: 2rem;
   }
 }
 
@@ -1092,8 +1106,8 @@ body {
     margin-bottom: 0rem;
   }
   .footer .copyright {
-    margin-top: 1rem;
+    margin-top: 0rem;
+    margin-bottom: 3rem;
   }
-  /*Items Page*/
 }
 /*# sourceMappingURL=style.css.map */
